--- a/vista/login.html
+++ b/vista/login.html
@@ -111,7 +111,7 @@
 </head>
 <body>
 <div>
-  <form action="login_validacion.php" method="post">
+  <form action="action_page.php" method="post">
       <div class="imgcontainer">
         <img src="/media/user.png" alt="Avatar" class="avatar">
       </div>
